--- a/src/reset.css
+++ b/src/reset.css
@@ -46,3 +46,16 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
+input {
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  font-size: 1.25rem;
+  width: 100%;
+  margin-left: 5px;
+}
+
+input:focus{
+  outline: none;
+}
