--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,24 @@ input:-moz-placeholder{
     color: var(--color-gray-900);
     height: 100px;
 }
+
+.jbutton {
+    position: relative;
+    z-index: 2;
+    background: transparent;
+    border-radius: 1px;
+    padding: 8px 32px;
+    border: none;
+    outline: 2px solid hsl(50deg 0% 50% / 1);
+    font-weight: bold;
+    cursor: pointer;
+    backdrop-filter: blur(10px);
+}
+
+.yellow.ball{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    background: hsl(50deg 100% 50%);
+    background: oklch(0.9 0.25 100 / 1);
+}
