--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap');
 
+/*
+  CSS RESET
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+* {
+  margin: 0;
+}
+html {
+  scrollbar-gutter: stable;
+}
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+
+
+
 html {
     overflow-y: scroll;
     --color-top-color: hsl(0deg 0% 10.98%);
     --color-gray-300: hsl(0deg 0% 28.63%);
     --color-gray-900: hsl(0deg 0% 90%);
-    --color-blue-400: hsl(197.55deg 76.42% 51.76%)
+    --color-blue-400: hsl(197.55deg 76.42% 51.76%);
+   
 }
 
 body {
     font-family: 'Mulish', sans-serif;
+    background-color: var(--color-backdrop);
 }
   
 input:-moz-placeholder{
