--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap');
+@import "~react-image-gallery/styles/css/image-gallery.css";
+
 
 /*
   CSS RESET
