--- a/src/styles.css
+++ b/src/styles.css
@@ -55,12 +55,14 @@ html {
     --color-gray-300: hsl(0deg 0% 28.63%);
     --color-gray-900: hsl(0deg 0% 90%);
     --color-blue-400: hsl(197.55deg 76.42% 51.76%);
+    --test-color: hotpink;
    
 }
 
 body {
     font-family: 'Mulish', sans-serif;
-    background-color: var(--color-backdrop);
+    /* background-color: var(--color-backdrop); */
+    background-color: #080808;
 }
   
 input:-moz-placeholder{
