--- a/src/components/NowShowingMovie/Nowshowing.module.css
+++ b/src/components/NowShowingMovie/Nowshowing.module.css
@@ -1,10 +1,14 @@
-
+.nowshowing{
+    padding: 20px;
+    font-size: 20px;
+    color: var(--color-white);
+}
 
 .wrapper{
     background: red;
     padding: 20px;
     background-color: var(--test-color);
     width: 300px;
-    height: 400px;
+    height: 250px;
     border-radius: 12px;
 }
