--- a/src/components/NowShowingMovie/Nowshowing.module.css
+++ b/src/components/NowShowingMovie/Nowshowing.module.css
@@ -1,14 +1,16 @@
 .nowshowing{
     padding: 20px;
-    font-size: 20px;
+    font-size: 1.4rem;
+    letter-spacing: 1.4px;
     color: var(--color-white);
 }
 
 .wrapper{
-    background: red;
     padding: 20px;
     background-color: var(--test-color);
     width: 300px;
     height: 250px;
     border-radius: 12px;
+    object-fit: cover;
+    /* display: flex; */
 }
