--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,8 +1,8 @@
 .cardwrapper{
     padding: 20px;
     background-color: var(--test-color);
-    width: 300px;
-    height: 250px;
+    width: 20vw;
+    /* height: 250px; */
     border-radius: 12px;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
