--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,8 +1,15 @@
 .cardwrapper{
     padding: 20px;
-    background-color: var(--test-color);
-    width: 20vw;
-    /* height: 250px; */
+    /* background-color: var(--test-color); */
+    width: 344px;
+    height: 230px;
     border-radius: 12px;
     /* object-fit: cover; */
+}
+
+.movieimg{
+  border-radius: 5%;
+  width: 100%;
+  height: 100%;
+  object-fit: fill; 
 }
