--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -12,4 +12,16 @@
   width: 100%;
   height: 100%;
   object-fit: fill; 
+  cursor: pointer;
+}
+
+.movieimg:hover{
+  
+}
+.moviename{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  color: hotpink
 }
