--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,10 +1,24 @@
 .cardwrapper{
-    padding: 20px;
+    padding: 10px;
     /* background-color: var(--test-color); */
     width: 344px;
     height: 230px;
     border-radius: 12px;
-    /* object-fit: cover; */
+    position: relative;
+}
+
+.newreleaselabel{
+  width: auto;
+  background-color: var(--color-yellow);
+  position: absolute;
+  top: 10px;
+  padding: 5px 10px 5px 15px;
+  border-radius: 9px;
+  font-size: 12px;
+  font-weight: bolder;
+  border-top-left-radius: unset;
+  border-bottom-left-radius: unset;
+  box-shadow: 0 1px 2px #00000059  
 }
 
 .movieimg{
@@ -19,9 +33,11 @@
   
 }
 .moviename{
+  font-weight: bolder;
   width: 100%;
   height: 100%;
   position: absolute;
-  right: 0;
-  color: hotpink
+  left: 30px;
+  top: 50%;
+  color: white
 }
