--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -41,7 +41,7 @@
   border-radius: 5%;
   width: 100%;
   height: 100%;
-  object-fit: fill; 
+  object-fit: cover; 
   cursor: pointer;
 }
 
@@ -52,8 +52,11 @@
   font-weight: bolder;
   width: 100%;
   height: 100%;
+  font-size: 1rem;
   position: absolute;
   left: 30px;
   top: 50%;
-  color: white
+  text-shadow: 0 3px 7px rgba(0,0,0,.8);
+  transition: all .3s ease-out;
+  color: var(--color-white)
 }
