--- a/src/styles.css
+++ b/src/styles.css
@@ -58,6 +58,7 @@ html {
     --color-yellow:  hsl(46.45deg 100% 57.45%);
     --color-white: white;
     --test-color: hotpink;
+    --color-black: black;
    
 }
 
