--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,7 @@ html {
     --color-white: white;
     --test-color: hotpink;
     --color-black: black;
+    --color-black-400: hsl(0deg 0% 10.2%)
    
 }
 
