--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -8,6 +8,19 @@
     transition: transform 250ms, opacity 400ms;
 }
 
+.likeheart{
+  position: absolute;
+  right: 50px;
+  top: 20px;
+}
+
+.likescount{
+  color: var(--color-white);
+  position: absolute;
+  right: 16px;
+  top: 16px;
+}
+
 .newreleaselabel{
   width: auto;
   background-color: var(--color-yellow);
@@ -75,10 +88,14 @@
   bottom: 0;
 }
 
-/* .moviehover:hover{
-  position: relative;
+
+
+
+.moviehover:hover{
+
+  /* position: relative;
   transform: scale(0.8);
   transform-origin: top center;
   will-change: transform;
-  transition: transform 500ms;
-} */
+  transition: transform 500ms; */
+}
