--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -12,6 +12,7 @@
   position: absolute;
   right: 50px;
   top: 20px;
+  cursor: pointer;
 }
 
 .likescount{
@@ -19,6 +20,7 @@
   position: absolute;
   right: 16px;
   top: 16px;
+  
 }
 
 .newreleaselabel{
