--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -39,7 +39,13 @@
 }
 
 .cardwrapper:hover .bookingstuff{
+  background-color: var(--color-yellow);
   position: absolute;
+  transform: scale(1);
+  transform-origin: top center;
+  will-change: transform; 
+  transition: all .3s ease-out;
+
   /* transform: scale(0.8);
   transform-origin: top center;
   will-change: transform; */
@@ -49,6 +55,7 @@
 .bookingstuff{
   display: flex;
   gap: 10px;
+  transform: scale(0);
   position: absolute;
   bottom: 2px;
   padding: 15px 12px;
@@ -78,10 +85,18 @@
   font-size: 1rem;
   position: absolute;
   left: 18px;
-  top: 50%;
+  top: 70%;
   text-shadow: 0 3px 7px rgba(0,0,0,.8);
   transition: all .3s ease-out;
   color: var(--color-white)
+}
+
+.cardwrapper:hover .moviename
+{
+  /* background-color: aqua; */
+  position: absolute;
+  top: 50%;
+  transition: all .3s ease-out;
 }
 
 .bookmarkmovie{
