--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -39,12 +39,12 @@
 }
 
 .cardwrapper:hover .bookingstuff{
-  background-color: var(--color-yellow);
+  /* background-color: var(--color-yellow); */
   position: absolute;
   transform: scale(1);
   transform-origin: top center;
   will-change: transform; 
-  transition: all .3s ease-out;
+  transition: all .3s ease-in;
 
   /* transform: scale(0.8);
   transform-origin: top center;
@@ -55,7 +55,7 @@
 .bookingstuff{
   display: flex;
   gap: 10px;
-  transform: scale(0);
+  transform: scale(1);
   position: absolute;
   bottom: 2px;
   padding: 15px 12px;
