--- a/src/components/FramerMotionLearnings/FramerMotion.module.css
+++ b/src/components/FramerMotionLearnings/FramerMotion.module.css
@@ -1,6 +1,70 @@
+.widget_wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.inbox,.outbox{
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
 
 .card{
     width: 300px;
     height: 300px;
     background-color: yellow;
 }
+
+.wrapper2{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.demoArea{
+    display: flex;
+    gap: 4px;
+    min-height: 200px;
+    border: 1px solid hsl(210deg, 15%, 18%);
+    padding: 4px;
+}
+
+.flexItem{
+    background: hsl(210deg, 15%, 18%);
+    padding: 8px;
+}
+
+.controls{
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
+.wrapper {
+    display: block;
+    width: 100px;
+    height: 50px;
+    border-radius: 1000px;
+    border: none;
+    padding: 6px;
+    border: 3px solid white;
+    background: transparent;
+    cursor: pointer;
+    box-sizing: content-box;
+    outline-offset: 6px;
+  }
+  
+  .ball {
+    display: block;
+    height: 100%;
+    aspect-ratio: 1 / 1;
+    background: hsl(50deg 100% 50%);
+    background: oklch(0.92 0.22 101.1);
+    border-radius: 1000px;
+  }
