--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -75,10 +75,10 @@
 } */
 .bookingstuff{
   width: 100%;
-  background: hotpink;
+  /* background: hotpink; */
   display: flex;
   gap: 10px;
-  transform: scale(1);
+  /* transform: scale(1); */
   position: absolute;
   bottom: 2px;
   padding: 15px 12px;
