--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -46,11 +46,9 @@
 } */
 
 
-.cardwrapper:hover .bookingstuff{
+/* .cardwrapper:hover .bookingstuff{
   top: 0;  
- 
- 
-}
+} */
 
 .container{
   position: relative;
