--- a/src/styles.css
+++ b/src/styles.css
@@ -166,3 +166,27 @@ input:-moz-placeholder{
   content: "";
   background: red;
 }
+
+
+.modalwrapper{
+  position: fixed;
+  inset: 0;
+  display: grid;
+  place-content: center;
+  padding: 16px;
+}
+
+.modalbackdrop {
+  position: absolute;
+  inset: 0;
+  background: hsl(0deg 0% 0% / 0.75);
+}
+
+.modaldialog{
+  position: relative;
+  background: white;
+  border-radius: 8px;
+  padding: 32px;
+  width: 340px;
+  max-width: 100vw;
+}
