--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ html {
 body {
     font-family: 'Mulish', sans-serif;
     /* background-color: var(--color-backdrop); */
-    background-color: #080808;
+    background-color: #212226;
 }
   
 input:-moz-placeholder{
@@ -201,4 +201,13 @@ input:-moz-placeholder{
   color: white;
   transform: translateY(-100%);
   cursor: pointer;
+}
+
+.movieimg{
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  border-radius: 18px;
+  box-shadow: 0 0 4px rgba(0, 123, 255, 0.7), 0 0 20px rgba(0, 123, 255, 0.5), 0 0 30px rgba(0, 123, 255, 0.3);
+    transition: box-shadow 0.3s ease;
 }
