--- a/src/components/FramerMotionLearnings/FramerMotion.module.css
+++ b/src/components/FramerMotionLearnings/FramerMotion.module.css
@@ -7,8 +7,50 @@
 
 .inbox,.outbox{
     display: flex;
-    flex-wrap: wrap;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: center;
+  gap: 4px;
+  padding: 4px;
+  width: 100vw;
+  max-width: 192px;
+  aspect-ratio: 12 / 9;
+  border: 4px solid hsl(140deg 100% 50%);
     
+}
+
+.widget{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    background: hsl(50deg, 100%, 60%);
+    background: lch(87 113.96 86.1);
+    border-radius: 2px;
+    color: black;
+    font-size: 1.25rem;
+}
+
+.actions {
+    width: 192px;
+    display: flex;
+    justify-content: space-between;
+} 
+
+.actions button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    height: 48px;
+    border: 2px solid hsl(0deg 0% 100% / 0.2);
+    background: transparent;
+    border-radius: 4px;
+}
+
+.actions button:hover{
+    background: hsl(0deg 0% 100% / 0.2);
 }
 
 
