--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -46,9 +46,9 @@
 } */
 
 
-/* .cardwrapper:hover .bookingstuff{
-  top: 0;  
-} */
+.cardwrapper:hover .movieimg{
+  transform: scale(1.2);
+}
 
 .container{
   position: relative;
@@ -88,6 +88,8 @@
   height: 100%;
   object-fit: cover; 
   cursor: pointer;
+  overflow: hidden;
+  transition: transform 500ms;
 }
 
 .movietitle{
