--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,7 @@ h6 {
 html {
     overflow-y: scroll;
     --color-top-color: hsl(0deg 0% 10.98%);
-    --color-gray-300: hsl(0deg 0% 28.63%);
+    --color-gray-300: hsl(0, 0%, 34%);
     --color-gray-900: hsl(0deg 0% 90%);
     --color-blue-400: hsl(197.55deg 76.42% 51.76%);
     --color-blue-300: #97b7f3;
